WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187065
Deal better with the network process crashing on startup
https://bugs.webkit.org/show_bug.cgi?id=187065
Summary
Deal better with the network process crashing on startup
Chris Dumez
Reported
2018-06-26 15:16:38 PDT
When a network process crashes on startup, we would not attempt to relaunch it. If there were web processes waiting for a connection to this network process, we would send them an invalid connection identifier which would cause them to forcefully crash. Instead, we now apply the same policy whether a network process crashes on startup or later: - We attempt to relaunch the network process - If there were pending connections from WebContent processes, we send them the conn
Attachments
Patch
(13.69 KB, patch)
2018-06-26 15:22 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-06-26 15:17:32 PDT
<
rdar://problem/41451622
>
Chris Dumez
Comment 2
2018-06-26 15:22:25 PDT
Created
attachment 343647
[details]
Patch
Geoffrey Garen
Comment 3
2018-06-26 18:39:29 PDT
Comment on
attachment 343647
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2018-06-26 19:11:05 PDT
Comment on
attachment 343647
[details]
Patch Clearing flags on attachment: 343647 Committed
r233240
: <
https://trac.webkit.org/changeset/233240
>
WebKit Commit Bot
Comment 5
2018-06-26 19:11:06 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug